Use userIds to map emotes and fix bg smoothness on iOS Safari

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -6,11 +6,10 @@ body {
   position: relative;
   margin: 0;
   height: 100vh;
-  background: linear-gradient(to right, #218ed7, #5c2aae);
+  background: linear-gradient(to right, rgba(33, 142, 215, 1), rgba(92, 42, 174, 1));
 }
 
-body::before {
-  content: "";
+.background-overlay {
   position: absolute;
   top: 0;
   left: 0;
@@ -18,11 +17,6 @@ body::before {
   height: 100%;
   background: linear-gradient(to right, rgba(6, 31, 48, 1), rgba(21, 15, 46, 1));
   z-index: -1;
-  transition: opacity 1.25s ease-in-out;
-}
-
-body.signed-in::before {
-  opacity: 0;
 }
 
 .color-fill {
